home background: size100% no repeat, need to test this on 1920 to see if it fixes the stretch

--- a/client/css/main.styl
+++ b/client/css/main.styl
@@ -211,6 +211,8 @@ body
 	#landing
 		min-height: 100%
 		background: url('/home_background.jpg')
+		background-size: 100%
+		background-repeat: no-repeat
 
 		.landing-header, .landing-footer
 			width: 100%
